# NDMI110-graphs-and-networks-practicals

./: .gitignore  README.md  panache.toml  pyproject.toml  requirements.txt
03/: 03_en.ipynb  03_en.qmd
04/: 04_en.html  04_en.ipynb  04_en.qmd
11/: 11_en.ipynb  11_en.qmd
