[project]
name = "ndmi110-graphs-and-networks"
version = "0.1.0"
description = "Graphs and Networks MMF UK Course"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celluloid>=0.2.0",
    "contextily>=1.7.0",
    "ipykernel>=7.2.0",
    "ipysigma>=0.24.6",
    "jupyter-bokeh>=4.0.5",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "osmnx>=2.1.0",
    "pandas>=3.0.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "watchfiles>=1.1.1",
]

[dependency-groups]
dev = [
    "black>=26.3.0",
    "ruff>=0.15.1",
    "ty>=0.0.21",
]
